--- a/src/components/events/events.scss
+++ b/src/components/events/events.scss
@@ -68,13 +68,14 @@
 
                     img {
                         width: 270px;
+                        max-height: 450px;
                         height: fit-content;
                         cursor: pointer;
                         transition: .3s;
                         -webkit-box-shadow: 0px 7px 23px 4px rgba(0, 0, 0, 0.4);
                         -moz-box-shadow: 0px 7px 23px 4px rgba(0, 0, 0, 0.4);
                         box-shadow: 0px 7px 23px 4px rgba(0, 0, 0, 0.4);
-
+                        
                         &:hover {
                             transform: scale(1.05)
                         }
@@ -85,7 +86,41 @@
                         margin: 10px 0;
                     }
                 }
+                
+            }
+        }
+    }
+}
 
+@media (min-width: 1750px) {
+    .events {
+        padding: 40px 80px;
+        .events-container {
+            h2 {
+                font-size: 2.5rem;
+            }
+            .events-images {
+                .event-wrapper {
+
+                    div {
+                        &.event-images-wrapper {
+                            width: 50%;
+                        }
+                        
+                        &.event-text-wrapper {
+                            width: 50%;
+                        }
+                        
+                        img {
+                            width: 320px;
+                            max-height: 480px;
+                        }
+
+                        p {
+                            font-size: 1.8rem;
+                        }
+                    }
+                }
             }
         }
     }
